--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
   <title>Welcome</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">Huikyeong World</a></h1>
-  <ol>
-    <li><a href="1.html">안희경</a><br></li>
-    <li><a href="2.html">권득현</a><br></li>
-  </ol>
-
-  <h2>우린 커플이얌</h2>
-  <p>
-  나랑 득현이는 <strong>커플</strong>이얌.
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">안희경</a><br></li>
+      <li><a href="2.html">권득현</a><br></li>
+    </ol>
+    <div id="article">
+      <h2>우린 커플이얌</h2>
+      <p>
+      나랑 득현이는 커플이얌. 우리는 2019년 11월 28일에 연애를 시작했어.
+      쿠쿠쿠 그전에는 궁극의 맛에서 그냥 친구로 지냈는데 어떻게 연애를 하게됐지??
+      정말 사람일은 모르는 거라니까~
+      </p>
+    </div>
+  </div>
 </body>
 </html>
