--- a/1.html
+++ b/1.html
@@ -3,23 +3,30 @@
 <head>
   <title>Huikyeong World</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">Huikyeong World</a></h1>
-  <ol>
-    <li><a href="1.html">안희경</a><br></li>
-    <li><a href="2.html">권득현</a><br></li>
-  </ol>
-
-  <h2>Huikyeong An</h2>
-  <p>
-  <img src="ahk.jpg" width="15%">
-  <br>
-  Hello. My name is <strong>Huikyeong An</strong>. I'm in <u>KAIST</u> for senior.</p>
-  <p style="margin-top:25px;">Age: 21
-  <br>Sex: female
-  <br>Major: Computer Science
-  <br>minor: <a href="https://www.youtube.com/channel/UC2c0pXp0bf7df-hXseUxfZg" target="_blank" title="moving image design">Industrial Design</a></p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">안희경</a><br></li>
+      <li><a href="2.html" class="saw" id="active">권득현</a><br></li>
+    </ol>
+    <div id="article">
+      <h2>Huikyeong An</h2>
+      <p>
+        <img src="ahk.jpg" width="15%">
+        <br>
+        Hello. My name is <strong>Huikyeong An</strong>. I'm in <u>KAIST</u> for junior.
+      </p>
+      <p style="margin-top:25px;">
+        Age: 21
+        <br>Sex: female
+        <br>Major: Computer Science
+        <br>minor: <a href="https://www.youtube.com/channel/UC2c0pXp0bf7df-hXseUxfZg" target="_blank" title="moving image design">Industrial Design</a>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
