--- a/2.html
+++ b/2.html
@@ -3,24 +3,30 @@
 <head>
   <title>Deukhyeon World</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">Huikyeong World</a></h1>
-  <ol>
-    <li><a href="1.html">안희경</a><br></li>
-    <li><a href="2.html">권득현</a><br></li>
-  </ol>
-
-  <h2>Deukhyeon Kwon</h2>
-  <p>
-  <img src="kdh.png" width="15%">
-  <br>
-  Hello. My name is <strong>Deukhyeon Kwon</strong>. I'm in <u>KAIST</u> for junior.</p>
-  <p style="margin-top:25px;">Age: 22
-  <br>Sex: male
-  <br>Major: Mathematical Science
-  <br>Double Major: Computer Science
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">안희경</a><br></li>
+      <li><a href="2.html">권득현</a><br></li>
+    </ol>
+    <div id="article">
+      <h2>Deukhyeon Kwon</h2>
+      <p>
+        <img src="kdh.png" width="15%">
+        <br>
+        Hello. My name is <strong>Deukhyeon Kwon</strong>. I'm in <u>KAIST</u> for junior.
+      </p>
+      <p style="margin-top:25px;">
+        Age: 22
+        <br>Sex: male
+        <br>Major: Mathematical Science
+        <br>Double Major: Computer Science
+      </p>
+    </div>
+  </div>
 </body>
 </html>
